# asyncpg_fastapi

./: README.rst  pyproject.toml
src/asyncpg_fastapi/: __init__.py  asyncpg_fastapi.py
tests/: test_asyncpg_fastapi.py
