[tool.poetry]
name = "asyncpg_fastapi"
version = "0.1.0"
description = ""
authors = ["lwinmgmg <lwinmaungmaung.ytu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.75.1"
asyncpg = "^0.25.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
